Added switches table

--- a/report.tex
+++ b/report.tex
@@ -78,53 +78,6 @@
 % --- Appendices ---
 
 % uncomment the following
+ \input{5-appendices}
 
-\newpage
-\appendix
-% 
-\section{Open Source Projects}
-\begin{sidewaystable}[htbf]
-\tiny
-\caption{Controllers and related}
-\begin{tabular}{|l|l|l|l|l|}
-\hline \hline
-\textbf{Name} & \textbf{Usage} & \textbf{Developers \& License} & \textbf{Link} & \textbf{Notes} \\
-\hline \hline
-\shortstack{Beacon}& \shortstack{OpenFlow controller that supports \\ event-based and threaded operation} & \shortstack[l]{Open Source,\\ David Erickson/Stanford University, \\ License: BSD License} & \shortstack {https://openflow.stanford.edu/display/Beacon/Home}  & \\
-\hline
-\shortstack{Floodlight} & \shortstack{Alternative OpenFlow Controller} & \shortstack[l]{Open Source,\\ sponsored by Big Switch} & \shortstack{http://www.projectfloodlight.org/floodlight/} &  \\
-\hline
-\shortstack{FlowER} & \shortstack{Erlang OpenFlow controller \& \\ development platform} & \shortstack[l]{Open Source,\\ TravelPing, License: MIT} & \shortstack{ https://github.com/travelping/flower} & \\
-\hline
-\shortstack{FlowForward Warp}  & \shortstack{Parses and encodes \\ OF messages \& handles connections \\ with OF datapathelements.} & \shortstack[l]{Open Source,\\ InfoBlox Inc., License: Apache 2.0} & \shortstack{http://flowforwarding.github.io/warp/} & \\
-\hline
-\shortstack{FlowVisor} & \shortstack{Controller that acts as \\ a hypervisor/proxy between \\ OpenFlow switches} & \shortstack[l]{Open Source,\\ On.Lab} & \shortstack{http://onlab.us/flowvisor.html} & \shortstack{Part of ON.LAB's Open SDN Stack}. \\
-\hline
-\shortstack{IRIS} & \shortstack{Recursive SDN controller} & \shortstack{Open Source,\\ ETRI, License: Apache 2.0} & \shortstack{http://openiris.etri.re.kr/} &                       \\
-\hline
-\shortstack{KulCloud Open MUL} & \shortstack{OpenFlow controller} & \shortstack{Open Source,\\ KulCloud, License: GPLv2} & \shortstack{http://sourceforge.net/projects/mul/} & \\
-\hline
-\shortstack{libfluid} & \shortstack{Basic library to implement \\ a controller upon.}& \shortstack{Open Source,\\ Open Networking Foundation/CPqD, \\ License: Apache 2.0  }  & \shortstack{http://opennetworkingfoundation.github.io/libfluid/} & \\
-\hline
-\shortstack{Maestro} & \shortstack{Control platform with \\ support for OpenFlow switches} & \shortstack{Open Source,\\ Zheng Cai/Rice University,\\ License: GNU Lesser GPL} & \shortstack{https://code.google.com/p/maestro-platform/}&\\
-\hline
-\shortstack{NodeFlow} & \shortstack{Node.js based \\ OpenFlow controller} & \shortstack{Open Source,\\ Gary Berger/(Cisco?), \\ License:MIT License} & \shortstack{http://garyberger.net/?p=537} & \\
-\hline
-\shortstack{NOX} & \shortstack{First OpenFlow controller} & \shortstack{Open Source,\\ NoxRepo, License: Apache 2.0} & \shortstack{http://www.noxrepo.org/nox/about-nox/} & \\
-\hline
-\shortstack{OpenContrail} & \shortstack{Virtual Network Controller, \\ includes analytics engine to handle Big Data.}& \shortstack{Open Source,\\ Juniper, License: Apache 2.0} & \shortstack{https://github.com/Juniper/contrail-build} & \\
-\hline
-\shortstack{OpenVNet} & \shortstack{Provides network virtualization \\ along with components such as \\ SDN controller, virtualswitch \\ and virtual router.} & \shortstack{Open Source,\\ Axsh.co, License: LGPL3} & \shortstack{http://openvnet.com/} & \\
-\hline
-\shortstack{POX}& \shortstack{General SDN controller} & \shortstack{Open Source,\\ NoxRepo, License: Apache 2.0} & \shortstack{http://www.noxrepo.org/pox/about-pox/}               & \\
-\hline
-\shortstack{Resonance} & \shortstack{Event-driven network controller} & \shortstack{Open Source,\\ Georgia institute of technology} & \shortstack{http://resonance.noise.gatech.edu/} & \\
-\hline
-\shortstack{Ryu} & \shortstack{SDN Framework written in Python} & \shortstack{Open Source,\\ License: Apache 2.0} & \shortstack{http://osrg.github.io/ryu/} & \\                                 \hline
-\shortstack{SNAC} & \shortstack{OpenFlow controller} & \shortstack{Open Source,\\ SNAC team, License: GPL} & \shortstack{http://www.openflowhub.org/display/Snac/SNAC+Home} & \\
-\hline
-\shortstack{Trema} & \shortstack{OpenFlow  controller framework} & \shortstack{Open Source,\\ NEC, License: GPLv2} & \shortstack{https://github.com/trema/trema}                      & \\   
-\hline                              
-\end{tabular}
-\end{sidewaystable}
 \end{document}
