Finished appendix tables

--- a/5-appendices.tex
+++ b/5-appendices.tex
@@ -75,3 +75,83 @@
 \hline       
 \end{tabular}
 \end{sidewaystable}
+
+\begin{sidewaystable}[htbf]
+\tiny
+\caption{Testing \& Simulating}
+\begin{tabular}{|l|l|l|l|l|}
+\hline \hline
+\textbf{Name} & \textbf{Usage} & \textbf{Developers \& License} & \textbf{Link} & \textbf{Notes} \\
+\hline \hline
+
+\shortstack{HyperGlance} & \shortstack{Network modeling and \\ visualization tool. \\Supports ODL, OpenStack \\ and AmazonWeb Services.} & \shortstack{Real Status, \\Free beta sign-up}&\shortstack{http://real-status.com/product/sdn} &                                  \\
+\hline
+\shortstack{Mininet} & \shortstack{Used for creating \\ virtual networks. Useful for \\ creating SDN testbeds.}                    & \shortstack{Open Source, On.Lab, \\ License: BSD Open Source} & \shortstack{http://mininet.org/}                                                                 & \shortstack{Part of ON.LAB's \\ Open SDN Stack.} \\
+\hline
+\shortstack{NICE} & \shortstack{For testing \\ controller applications}                                                     & \shortstack{Open Source, \\ NICE, License: BSD} & \shortstack{https://code.google.com/p/nice-of/}                                                  &                                  \\
+\hline
+\shortstack{ns-3} & \shortstack{discrete-event \\ network simulator}                                                        & \shortstack{Open Source, \\ License: LGPlv2}                                        & \shortstack{http://www.nsnam.org/}                                                               & \shortstack{Has OpenFlow support}             \\
+\hline
+\shortstack{OFLOPS} & \shortstack{Benchmarking OF switches}                                                               & \shortstack{Open Source, \\ Rob Sherwood}                                             & \shortstack{http://archive.openflow.org/wk/index.php/Oflops}                                     &                                  \\
+\hline
+\shortstack{OFTest}      & \shortstack{Testing framework \\ and suite for OF \\ compliance testing.}                                          & \shortstack{Open Source, \\ sponsored by Big Switch. \\ License: Open Flow Software License} & \shortstack{http://www.projectfloodlight.org/oftest/}                                            &                                  \\
+\hline
+\shortstack{PerfSonar}   & \shortstack{For monitoring network performance}                                                      & \shortstack{Open Source, EsNet}                                                    & \shortstack{http://fasterdata.es.net/performance-testing/perfsonar/}                             &                                  \\
+\hline
+\shortstack{STS}         & \shortstack{Troubleshooting Simulator}                                                               & \shortstack{Open Source, \\ STS team, License: Apache 2.0}                            & \shortstack{http://ucb-sts.github.io/sts/}                                                       & \shortstack{Depends on POX}                   \\
+\hline
+\shortstack{TestOn}      & \shortstack{For automating \\ OpenFlow/SDN components}                                                 & \shortstack{Open Source, Paxterra} & \shortstack{https://github.com/Paxterra/TestON}  & \\   
+\hline
+\end{tabular}
+\end{sidewaystable}
+
+\begin{sidewaystable}[htbf]
+\tiny
+\caption{Other projects}
+\begin{tabular}{|l|l|l|l|l|}
+\hline \hline
+\textbf{Name} & \textbf{Usage} & \textbf{Developers \& License} & \textbf{Link} & \textbf{Notes} \\
+\hline \hline
+
+\shortstack{enetconf} & \shortstack{NetConf library \\ in Erlang}                                                   & \shortstack{Open Source, \\ FlowForwarding.org,License: Apache 2.0}                                                                   & \shortstack{https://github.com/FlowForwarding/enetconf}                                       &                                                                                           \\
+ \hline
+ \shortstack{Flowscale} & \textbf{Traffic balancing}                                                           & \shortstack{Open source, INCntre}                                                                                                  & \shortstack{https://github.com/InCNTRE/FlowScale}                                             &                                                                                           \\
+ \hline
+ \shortstack{Frenetic/Pyretic} & \shortstack{DSLs for SDN development. \\ Includes a runtime system} & \shortstack{Open Source, Princeton University,\\ License: GNU General Public \\ License version 3} & \shortstack{http://www.frenetic-lang.org/}                                                    &                                                                                           \\
+ \hline
+\shortstack{Indigo} & \shortstack{HAL and configuration \\ abstraction for running \\ OpenFlow in hybrid mode.} & \shortstack{Open Source, sponsored by \\ Big Switch. License: Eclipse Public \\ License version 1}                                          & \shortstack{http://www.projectfloodlight.org/indigo/}                                         & \shortstack{Uses LoxiGen}\\
+\hline
+\shortstack{MirageOS} & \shortstack{Unikernel for network \\ application development} & \shortstack{Open Source, \\ Mirage team, License LGPlv2}                                                                             & \shortstack{http://www.openmirage.org/}                                                       & \shortstack{Supports OpenFlow} \\
+\hline
+\shortstack{Nettle} & \shortstack{DSL written in Haskell \\ for controlling OFswitches} & \shortstack{Open Source, \\ Yale University, License: BSD3}                                                                          & \shortstack{http://hackage.haskell.org/package\\/nettle-openflow-0.2.0}                         &                                                                                           \\
+\hline
+\shortstack{nwEPC - EPC SAE Gateway} & \shortstack{EPC SAE Gateway}                                                            & \shortstack{Open Source, \\ Thomas Bhatia License: BSD}                                                                              & \shortstack{https://github.com/ \\thomasbhatia/nwEPC---EPC-SAE-Gateway}                          &                                                                                           \\
+\hline
+\shortstack{OESS} & \shortstack{Controlling VLAN \\ with OF enabled switches}                                  & \shortstack{Open Source, NDDI, License: Apache 2.0}                                                                               & \shortstack{https://code.google.com/p/nddi/wiki/README}                                       &                                                                                           \\
+\hline
+\shortstack{of\_protocol} & \shortstack{OpenFlow Protocol \\ Library in Erlang}                                        & \shortstack{Open Source, \\ FlowForwarding.org,License: Apache 2.0}                                                                  & \shortstack{https://github.com/FlowForwarding/of\_protocol}                                   &                                                                                           \\
+\hline
+\shortstack{Oflib-Node} & \shortstack{OF protocol library for \\ converting OF wireprotocol messages \\ and Javascript} & \shortstack{Open Source,\\ Ericsson, License: Custom}                                                                               & \shortstack{https://github.com/TrafficLab/oflib-node}                                         &                                                                                           \\
+\hline
+\shortstack{ONOS} & \shortstack{Network OS. \\ NOT YET RELEASED}                                               & \shortstack{Open Source, On.Lab}                                                                                                  & \shortstack{http://onlab.us/tools.html\#os}                                                   & \shortstack{Part of ON.LAB's \\ Open SDN Stack.} \\
+\hline
+\shortstack{Open Daylight} & \shortstack{Full SDN stack.}                                                            & \shortstack{Open Source, Linux Foundation \\ Collaborative Projects, \\ License: Eclipse Public License}                                 & \shortstack{http://www.opendaylight.org/}                                                     &                                                                                           \\
+\hline
+\shortstack{Open Source IMS Core} & \shortstack{IMS - provides CSCFs and HSS}                                               & \shortstack{Open Source, Fraunhofer FOKUS}                                                                                        & \shortstack{http://www.openimscore.org/}                                                      &                                                                                           \\
+\hline
+\shortstack{OpenEPC} & \shortstack{Full evolved packet core}                                                   & \shortstack{Fraunhofer FOKUS, \\ uses open sourcec omponents. \\ Licensing plans available to customers.} & \shortstack{http://www.openepc.net/}                                                &                                                                                           \\
+\hline
+\shortstack{OpenFaucet} & \shortstack{Python implementation of \\ OpenFlow 1.0.0 protocol} & \shortstack{Open Source, Midokura, \\ License: Apache 2.0}                                                                           & \shortstack{https://github.com/rlenglet/openfaucet}                                           &                                                                                           \\
+\hline
+\shortstack{OpenFlowSec utilities}                   & \shortstack{SRI international provides \\ a plethora of security plugins \\ and extensions.}   & \shortstack{Open Source, SRI International}                                                                                       & \shortstack{http://www.openflowsec.org/}                                                      &                                                                                           \\
+\hline
+\shortstack{OpenVirtex (OVX)}& \shortstack{Network hypervisor for virtual networks}                                    & \shortstack{Open Source, On.Lab, \\ License: Apache 2.0}                                                                             & \shortstack{http://ovx.onlab.us/}                                                             &                                                                                           \\
+\hline
+\shortstack{RouteFlow} & \shortstack{Virtual IP Routing}                                                         & \shortstack{Open Source, CPqD}                                                                                                    & \shortstack{http://routeflow.github.io/RouteFlow/}                                            & \shortstack{Uses many other components: \\ POX, OpenFlow, \\ Open vSwitch, Quagga, \\ MongoDB, jQuery and JIT.} \\
+\hline
+\shortstack{The BIRD} & \shortstack{Internet routing daemon}                                                    & \shortstack{Open Source, \\ CZ.NIC Labs, License: GPL}                                                                               & \shortstack{http://bird.network.cz/}                                                          &                                                                                           \\
+\hline
+\shortstack{Wakame-vdc} & \shortstack{Used for data center \\ virtualization.}                                       & \shortstack{Open Source, Axsh.co, \\ License: LGPL 3.0 and Apache 2.0}                                                               & \shortstack{https://github.com/axsh/wakame-vdc}                                               &                                                                                          \\
+\hline
+\end{tabular}
+\end{sidewaystable}
