Added EU Projects

--- a/2-components.tex
+++ b/2-components.tex
@@ -116,4 +116,33 @@ EU has various research projects under moniker Seventh Framework Programme (FP7)
 
 SDN development seems to be thriving and especially different companies have taken great interest in the concept. Open Daylight, being the biggest company backed SDN project to date, is evolving continuously. During this year as many as 15 new project proposals have been accepted to be included in Open Daylight, among those dedicated Service Function Chaining component, Authentication, Authorization and Accounting component and application policy plugin to name few \cite{projects}. While Floodlight isn't evolving with as rigorous pace, the active development and moderate company involvement is likely to keep Floodlight Open Daylight's main competition. However, the two big controllers might get a new rival in the future. Currently the top trending project in sdncentral.com is On.Lab's upcoming network operating system ONOS \cite{SDNCentral, ONOS}. ONOS is to complete On.Lab's SDN stack consisting of ONOS, FlowVisor and Mininet. It is to feature controller function as well as horizontal co-ordination and communication among multiple ONOS instances allowing easier scalability for networks. The first prototype was demonstrated at year 2013's Open Network Summit and according to On.Lab ONOS will be released this year but no definitive date has been given.
 
+\subsection{Ongoing EU Projects}
+\subsubsection{FELIX}
+
+The main goal of FELIX project (FEderated Test-beds for Large-scale Infrastruction eXperiments) is to build a common ground for users, in order to monitor, request, and manage a slice of distributed Internet network in Japan and Europe. In FELIX, new technologies, which are rising and Software Defined Networking control frameworks are investigated (such as OFELIA OCF, and Open Grid Forum) in order to assess their applicability in the project. \cite{FELIXproject}
+
+Therefore FELIX, in order to succeed its goal, proposes a novel SDN-oriented service design, which has the ability to engage heterogeneous high-end FI facilities (such as JGN-X RISE and OFELIA). Thus, in order to satisfy the needs of Japanese and European research groups, high capable NSI-enabled networks are used that offer building the experimental infrastructure in a dynamic and seamless way. 
+
+\subsubsection{SPARC}
+
+SPARC (Split architecture for carrier-grade networks) aims to examine dividing the traditional IP router architecture into severable control and forwarding planes. Thus, in order to achieve this, SPARC will implement a prototype based on OpenFlow concept. Upon achievement, they are planning to open the doors for new players in the market by reducing the obstacles, which exist in the complexity of each single elements. Therefore, the starting point for SPARC, would be OpenFlow and GMPLS, and examining how with mixing these two, current network quality can be improved for moving into simpler and standardized hardware. \cite{SPARCproject}
+
+\subsubsection{OFELIA}
+
+OFELIA gives the ability to researchers to do experiments on a test network that has multi-layer and multi-technology, and also gives the permission to control the network itself accurately and dynamically. It creates different tools with various options and runs networks and services on top of it, in order to bring innovation to the future Internet. Therefore, if a researcher has an idea, by log in to OFELIA webpage, has the ability to configure his/her own network slice and run experiments on it. OFELIA supports information centric networking (ICN), thus researchers can deploy and test an ICN system. \cite{OFELIAproject}   
+
+\subsubsection{ALIEN}
+
+ALIEN aims to  build a solid infrastructure for software defined networking by abstracting network mechanism and interoperability of heterogeneous network components. ALIEN uses Network Operating System (NOS), which is a distributed system operating on top of heterogenous network structure. NOS, gives the ability to view the whole network components and their functionalities. NOS in ALIEN project will be inspired by management and control framework of OFELIA FIRE facility. \cite{ALIENproject}
+
+There are different network component, which are unfamiliar with OpenFlow technology such as network processors, switches, optical network components, and programmable hardware. ALIEN, expands OpenFlow control of OFELIA and its design in order to abstract network information of above mentioned devices. NOS in ALIEN project uses a new hardware description language and also functional abstraction method in order to have uniform demonstration of network components and their functionalities that is not compatible with OpenFlow. This language, will describe input and output format, topology information, and different functionalities of hardware in order to show the pipelining of actions on particular network device. In short, ALIEN is a Hardware Abstraction Layer (HAL) in order to make non-OpenFlow network components have seamless migration to SDN.    
+
+\subsubsection{OFERTIE}
+
+OFERTIE (Open-Flow Experiment in Real-Time Internet Edutainment) is a 24 months project, which is founded by EC FP7 programme. The goal of OFERTIE is to use SDN in order to improve the way distributed applications are delivered in future of Internet, known as Real-Time Online Interactive Applications (ROIA). In this project, programmable networking techniques are going to be discovered in order to handle networking bottlenecks that restrict ROIA applications for scalability and quality of experience. OFERTIE with the help of OFELIA testbed is going to run various experiments to discover how programmable networks can be helpful for technical solutions such as QoS and multicast, and what business models can benefit from these solutions in an economically sustainable manner. \cite{OFERTIEproject} 
+
+\subsubsection{FIRE}
+
+Fire (Future Internet Research and Experimentation) is launched in 2007 as member of Framework Programme 7 (FP7). One of the goals of FIRE is to promote experiments, on new instances, networking concepts and architectures for the future Internet. The other goal of FIRE is to build large-scale experimentation facilities in order to help medium as well as long-term research on networks and services. FIRE, currently has twelve projects, which eight of them are research-focused and experimentally-driven, whereas the other four projects are “facility projects” to build empirical platforms for future internet researchers. \cite{FIREproject}  
+
 \clearpage
