--- a/references.bib
+++ b/references.bib
@@ -905,3 +905,39 @@
   urldate = {07-08-2014}
 }
 
+@online{SPARCproject,
+ title = {Software Defined Networking for Next Generation Internet Components
+}, 
+url = {http://www.fp7-sparc.eu/goals/}, 
+urldate = {12-08-2014}
+}
+
+@online{FELIXproject,
+ title = {About FELIX}, 
+url = {http://www.ict-felix.eu/?page_id=25}, 
+urldate = {12-08-2014}
+}
+
+@online{OFELIAproject,
+ title = {What does OFELIA?}, 
+url = {http://www.fp7-ofelia.eu/assets/Uploads/About-OpenFlow-OFELIA.pdf}, 
+urldate = {13-08-2014}
+}
+
+@online{ALIENproject,
+ title = {About ALIEN}, 
+url = {http://www.fp7-alien.eu/?page_id=12}, 
+urldate = {13-08-2014}
+}
+
+@online{OFERTIEproject,
+ title = {About OFERTIE}, 
+url = {http://www.ofertie.org/}, 
+urldate = {13-08-2014}
+}
+ 
+@online{FIREproject,
+ title = {The FIRE landscape}, 
+url = {http://www.ict-fire.eu/home/the-fire-landscape.html}, 
+urldate = {13-08-2014}
+}        
