Added more typo/misc. fixes

--- a/4-discuss.tex
+++ b/4-discuss.tex
@@ -2,7 +2,7 @@
 
 \subsection{Security concerns}
 
-There’s a lot of theoretical discussion around SDN, but widely accepted commercial products are still on their way \cite{Sorensen12}. Most of the discussion has been about the SDN architecture and organization, but while SDN is by no means more vulnerable than traditional networks, the threats exist and are partly different and specific to SDN \cite{Kreutz13}. The most glaring issue comes with one of the cornerstones of SDN. The centralization of control means that the successful attack to a SDN controller could easily compromise the functionality of the whole network. These attacks could be carried out as Distributed Denial of Service (DDoS) attacks by attacking controller directly or modifying switch behaviour (forged requests, cloning of flows etc.), exploiting administrative stations (gaining access to controller servers themselves) or exploiting a controller with a malicious network application  \cite{Kreutz13}. Network should also be able to successfully recover from a problem or an incident and hence correct and safe logging and tracing of network states are likely to be required.
+There is a lot of theoretical discussion around SDN, but widely accepted commercial products are still on their way \cite{Sorensen12}. Most of the discussion has been about the SDN architecture and organization, but while SDN is by no means more vulnerable than traditional networks, the threats exist and are partly different and specific to SDN \cite{Kreutz13}. The most glaring issue comes with one of the cornerstones of SDN. The centralization of control means that the successful attack to a SDN controller could easily compromise the functionality of the whole network. These attacks could be carried out as Distributed Denial of Service (DDoS) attacks by attacking controller directly or modifying switch behaviour (forged requests, cloning of flows etc.), exploiting administrative stations (gaining access to controller servers themselves) or exploiting a controller with a malicious network application  \cite{Kreutz13}. Network should also be able to successfully recover from a problem or an incident and hence correct and safe logging and tracing of network states are likely to be required.
 Kreutz et al. suggest other general solutions to counter possible security threats. These are controller replication and systems diversity, dynamic associations between network devices and controllers (e.g. If a controller fails, switches associate with a new one), self-healing and software update and patching mechanisms, establishing trust between network devices and controllers and network applications and controllers, establishing security domains (e.g. sandboxing) and using secure components. In conclusion, SDN security is still relatively unexplored area and for commercial uses of SDN acknowledging and addressing the issues is required.
 
 
