--- a/2-components.tex
+++ b/2-components.tex
@@ -81,7 +81,7 @@ Other lesser known controllers and controller frameworks are for example a very 
 \clearpage
 \subsection{Switches}
 
-OpenFlow relies fundamentally on switches: there has to be at least one in the network to connect to a controller, otherwise using OpenFlow is not possible. OpenFlow being near synonymous to SDN and network functions virtualisation or NFV being a hot topic for conversation along with SDN there’s a demand and supply for standardised, vendor-agnostic virtual and physical switches. With SDN and network virtualization it is possible to eliminate the need for specialised switches, routers, middleboxes etc. and utilise the network elements on ordinary X86 servers.
+OpenFlow relies fundamentally on switches: there has to be at least one in the network to connect to a controller, otherwise using OpenFlow is not possible. OpenFlow being near synonymous to SDN and network functions virtualisation and NFV being a hot topic for conversation along with SDN there’s a demand and supply for standardized, vendor-agnostic virtual and physical switches. With SDN and network virtualization it is possible to eliminate the need for specialized switches, routers, middleboxes etc. and utilize the network elements on ordinary X86 servers.
 
 VMWare’s Open VSwitch is undoubtedly the most well known of virtual switches \cite{VSwitch}. It has been ported to multiple virtualization platforms such as VirtualBox
 and KVM, is included in few Linux kernels and bundled with many SDN projects and is also integrated to various virtual management systems like OpenStack. Open VSwitch offers many features like several QoS and security components and it supports few different protocols.
@@ -106,15 +106,13 @@ There hasn’t been as much talk about security with SDN as there have been on f
 
 Other projects aim to enhance the performance of the network. InCntre’s Flowscale \cite{Flowscale} is a network load balancer, but the development has stopped after version 0.6. This may be because of many controller applications including load balancer of their own. Both the BIRD by CZ.NIC Labs and CPqD’s RouteFlow offer IP routing \cite{Bird, RouteFlow}.
 
-Some components are made to enhance SDN development. These include domain specific languages like Frenetic and Pyretic developed in Princeton University \cite{Frenetic} and Haskell based Nettle \cite{Nettle} from Yale university. In same vein FlowForwarding.org offers protocol libraries for NetConf and OpenFlow written in Erlang \cite{enetconf,ofproto}, Midokura has one for OpenFlow written in Python \cite{OpenFaucet} and Ericsson provides a library made with Node.js \cite{Node}. They are named enetconf, of\_protocol, OpenFaucet and Oflib-Node respectively. 
+Some components are made to enhance SDN development. These include domain specific languages like Frenetic and Pyretic developed in Princeton University \cite{Frenetic} and Haskell based Nettle \cite{Nettle} from Yale university. In the same vein FlowForwarding.org offers protocol libraries for NetConf and OpenFlow written in Erlang \cite{enetconf,ofproto}, Midokura has one for OpenFlow written in Python \cite{OpenFaucet} and Ericsson provides a library made with Node.js \cite{Node}. They are named enetconf, of\_protocol, OpenFaucet and Oflib-Node respectively. 
 
-Other various project include Big Switch’s Indigo \cite{Indigo}, a hardware abstraction layer and configuration layer meant for communication between floodlight and the physical layer, MirageOS \cite{Mirage}, used for constructing unikernels for network applications, wakame-vdc and Open Virtex for data center virtualization \cite{wakame, Virtex} and for wireless communication there is nwEPC - EPC SAE Gateway by Thomas Batia \cite{nwEPC} and Open Source IMS Core and OpenEPC from Fraunhofer Fokus \cite{IMSCORE, OpenEPC} of which latter is not an open source project but otherwise worth mentioning in this context. 
-
-EU has various research projects under moniker Seventh Framework Programme (FP7) \cite{FP7} which has produced both research and open source software. Some individual projects in FP7 like FELIX and OFELIA and FIRE research testbeds for use and frameworks for using them (OFELIA) \cite{FELIX, OFELIA, FIRE}. Other projects focus more straightforwardly to OpenFlow. ALIEN project \cite{ALIEN} for instance offers an OpenFlow enabling hardware abstraction layer for non-OpenFlow enabled devices and integration with OFELIA whereas OFERTIE \cite{OFERTIE} aims to improve delivery of real-time interactive applications on the networks. SPARC \cite{SPARC} project aims to enhance standard SDN architecture by splitting the control and forwarding functions by utilizing MPLS.
+Other various project include Big Switch’s Indigo \cite{Indigo}, a hardware abstraction layer and configuration layer meant for communication between Floodlight and the physical layer, MirageOS \cite{Mirage}, used for constructing unikernels for network applications, wakame-vdc and Open Virtex for data center virtualization \cite{wakame, Virtex} and for wireless communication there is nwEPC - EPC SAE Gateway by Thomas Batia \cite{nwEPC} and Open Source IMS Core and OpenEPC from Fraunhofer Fokus \cite{IMSCORE, OpenEPC} of which latter is not an open source project but otherwise worth mentioning in this context. 
 
 \subsection{Future developments}
 
-SDN development seems to be thriving and especially different companies have taken great interest in the concept. Open Daylight, being the biggest company backed SDN project to date, is evolving continuously. During this year as many as 15 new project proposals have been accepted to be included in Open Daylight, among those dedicated Service Function Chaining component, Authentication, Authorization and Accounting component and application policy plugin to name few \cite{projects}. While Floodlight isn't evolving with as rigorous pace, the active development and moderate company involvement is likely to keep Floodlight Open Daylight's main competition. However, the two big controllers might get a new rival in the future. Currently the top trending project in sdncentral.com is On.Lab's upcoming network operating system ONOS \cite{SDNCentral, ONOS}. ONOS is to complete On.Lab's SDN stack consisting of ONOS, FlowVisor and Mininet. It is to feature controller function as well as horizontal co-ordination and communication among multiple ONOS instances allowing easier scalability for networks. The first prototype was demonstrated at year 2013's Open Network Summit and according to On.Lab ONOS will be released this year but no definitive date has been given.
+SDN development seems to be thriving and especially different companies have taken great interest in the concept. Open Daylight, being the biggest company backed SDN project to date, is evolving continuously. During this year as many as 15 new project proposals have been accepted to be included in Open Daylight, among those dedicated Service Function Chaining component, Authentication, Authorization and Accounting component and application policy plugin to name few \cite{projects}. While Floodlight is not evolving with as rigorous pace, the active development and moderate company involvement is likely to keep Floodlight Open Daylight's main competition. However, the two big controllers might get a new rival in the future. Currently the top trending project in sdncentral.com is On.Lab's upcoming network operating system ONOS \cite{SDNCentral, ONOS}. ONOS is to complete On.Lab's SDN stack consisting of ONOS, FlowVisor and Mininet. It is to feature controller function as well as horizontal co-ordination and communication among multiple ONOS instances allowing easier scalability for networks. The first prototype was demonstrated at year 2013's Open Network Summit and according to On.Lab ONOS will be released this year but no definitive date has been given.
 
 \subsection{Ongoing EU Projects}
 \subsubsection{FELIX}
