Fixed typeset error

--- a/references.bib
+++ b/references.bib
@@ -363,12 +363,11 @@
 
 @TECHREPORT{Sorensen12,
   author = {Sarah Sorensen},
-  title = {Security Implications of Software‐Defined Networks},
+  title = {Security Implications of Software-Defined Networks},
   institution = {SDNCentral},
   year = {2012},
   type = {Whitepaper},
   keywords = {SDN, Security},
-  timestamp = {2014.08.14},
   url = {http://www.sdncentral.com/download-sdn-security-whitepaper/}
 }
 
